# FPGA-GPU

./: .gitignore  .gitmodules  setup.sh
SGP/: .gitignore  BYTESSS.txt  CMakeLists.txt  HereYaGo.tcl  setup.sh
SGP/extra/: generate.py  test SCript.txt  test.tcl
SGP/hw/board/nexys_video/: board.xml  mig.prj  part0_pins.xml  preset.xml
SGP/hw/constrs/: NexysVideo_Master.xdc  axis_async_fifo.tcl  eth_mac_fifo.tcl  timing_workarounds-donotuse.tcl  vdma_timing_workaround.xdc
SGP/hw/if/eth_v1_0/: eth.xml  eth_rtl.xml
SGP/hw/ip/: sgp_types.vhd
SGP/hw/ip/axis_rx_tagger/: component.xml
SGP/hw/ip/axis_rx_tagger/proj/: axis_rx_tagger.tcl
SGP/hw/ip/axis_rx_tagger/src/: axis_rx_tagger.vhd
SGP/hw/ip/axis_tx_tagger/: component.xml
SGP/hw/ip/axis_tx_tagger/proj/: axis_tx_tagger.tcl
SGP/hw/ip/axis_tx_tagger/src/: axis_tx_tagger.vhd
SGP/hw/ip/axis_udp_ethernet/: component.xml
SGP/hw/ip/axis_udp_ethernet/proj/: axis_udp_ethernet.tcl
SGP/hw/ip/axis_udp_ethernet/src/: arbiter.v  arp.v  arp_cache.v  arp_eth_rx.v  arp_eth_tx.v  axis_adapter.v  axis_async_fifo.v  axis_async_fifo_adapter.v  axis_fifo.v  axis_gmii_rx.v  axis_gmii_tx.v  axis_udp_ethernet.v  axis_udp_ethernet_core.v  debounce_switch.v  eth.xdc  eth_arb_mux.v  eth_axis_rx.v  eth_axis_tx.v  eth_mac_1g.v  eth_mac_1g_rgmii.tcl  eth_mac_1g_rgmii.v  eth_mac_1g_rgmii_fifo.v  eth_phy_10g_tx_if.v  fpga.xdc  iddr.v  iodelay.tcl  ip.v  ip_arb_mux.v  ip_complete.v  ip_eth_rx.v  ip_eth_tx.v  lfsr.v  oddr.v  priority_encoder.v  rgmii_phy_if.tcl  rgmii_phy_if.v  ssio_ddr_in.v  ssio_ddr_out.v  sync_reset.tcl  sync_reset.v  (+6 more)
SGP/hw/ip/sgp_rasterizer/: component.xml
SGP/hw/ip/sgp_rasterizer/proj/: sgp_rasterizer.tcl  sgp_rasterizer.xpr
SGP/hw/ip/sgp_rasterizer/src/: primitiveAssembly_core.vhd  sgp_rasterizer.vhd  sgp_rasterizer_axi_lite_regs.vhd  triangleSetup_core.vhd  triangleTest_core.vhd  triangleTraversal_core.vhd
SGP/hw/ip/sgp_rasterizer/xgui/: sgp_rasterizer_v1_45.tcl
SGP/hw/ip/sgp_renderOutput/: component.xml
SGP/hw/ip/sgp_renderOutput/proj/: sgp_renderOutput.tcl
SGP/hw/ip/sgp_renderOutput/src/: sgp_renderOutput.vhd  sgp_renderOutput_axi_lite_regs.vhd
SGP/hw/ip/sgp_renderOutput/xgui/: sgp_renderOutput_v1_0.tcl  sgp_renderOutput_v1_65.tcl
SGP/hw/ip/sgp_vertexShader/: component.xml
SGP/hw/ip/sgp_vertexShader/proj/: sgp_vertexShader.tcl
SGP/hw/ip/sgp_vertexShader/src/: sgp_vertexShader.vhd  sgp_vertexShader_axi_lite_regs.vhd  vertexShader_core.vhd
SGP/hw/ip/sgp_vertexShader/xgui/: sgp_vertexShader_v1_38.tcl
SGP/hw/ip/sgp_viewPort/: component.xml
SGP/hw/ip/sgp_viewPort/proj/: sgp_viewPort.tcl
SGP/hw/ip/sgp_viewPort/src/: sgp_viewPort.vhd  sgp_viewPort_axi_lite_regs.vhd
SGP/hw/ip/sgp_viewPort/xgui/: sgp_viewPort_v1_0.tcl
SGP/hw/ip/vertexFetch_core/: component.xml
SGP/hw/ip/vertexFetch_core/proj/: vertexFetch_core.tcl
SGP/hw/ip/vertexFetch_core/src/: vertexFetch_axi_lite_regs.vhd  vertexFetch_core.vhd
SGP/hw/proj/: design-1.tcl  design_1.tcl  sgp_system.tcl
SGP/sw/: Makefile
SGP/sw/common/: common.mk
SGP/sw/common/shaders/: bigpoints.vert  color.frag  mvp_transform.vert  passthrough.frag  passthrough.vert  passthrougha.vert  passthroughuv.frag  passthroughuv.vert
SGP/sw/common/shaders/ogldir2/: text.frag  text.vert  triangle.frag  triangle.vert
SGP/sw/src/Examples/01_glfwtest/: 01_glfwtest.c  Makefile
SGP/sw/src/Examples/02_simpleshader/: 02_simpleshader.c  Makefile
SGP/sw/src/Examples/03_triangle/: 03_triangle.cpp  Makefile
SGP/sw/src/Examples/03_triangle-openGL4.3/: 03_trianglecpp.cpp  Makefile  RenderSystem.cpp  RenderSystem.h  triangle.cpp  triangle.h
SGP/sw/src/Examples/04_matrices/: 04_matrices.cpp  Makefile
SGP/sw/src/Examples/05_colored_cube/: 05_colored_cube.cpp  Makefile
SGP/sw/src/Examples/06_textured_cube/: 06_textured_cube.cpp  Makefile
SGP/sw/src/Examples/07_model_loading/: 07_model_loading  07_model_loading.cpp  Makefile
SGP/sw/src/Examples/08_basic_shading/: 08_basic_shading  08_basic_shading.cpp  Makefile
SGP/sw/src/Examples/09_2d_fonts/: 09_2d_fonts  09_2d_fonts.cpp  Makefile
SGP/sw/src/Examples/10_normal_mapping/: 10_normal_mapping.cpp  Makefile
SGP/sw/src/Examples/11_transparency/: 11_transparency.cpp  Makefile
SGP/sw/src/Final/: CMakeLists.txt  Main.cpp  Makefile
SGP/sw/src/Games/01_pacman/: 01_pacman.cpp  Makefile  pacman.cpp
SGP/sw/src/MP-1/00_CustomTest/: 00_CustomTest.cpp  CMakeLists.txt
SGP/sw/src/MP-1/01_ClearTest/: 01_ClearTest  01_ClearTest.c  CMakeLists.txt  Makefile
SGP/sw/src/MP-1/02_TheRedPixel/: 02_TheRedPixel  02_TheRedPixel.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-1/03_Sierpinski/: 03_Sierpinski  03_Sierpinski.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-1/04_Fractals/: 04_Fractals  04_Fractals.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-1/05_Fern/: 05_Fern  05_Fern.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-1/06_ViewPorting/: 06_ViewPorting.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-2/01_TheRedTriangle/: 01_TheRedTriangle.cpp  CMakeLists.txt  Makefile
SGP/sw/src/MP-2/02_snowflake/: 02_snowflake  02_snowflake.cpp  (+2 more)
SGP/utils/: Makefile
SGP/utils/include/: sgp.h  sgp_axi.h  sgp_graphics.h  sgp_shaders.h  sgp_system.h  sgp_transmit.h  simpleGLU.h
SGP/utils/src/glslc_test/: CMakeLists.txt  Makefile  glslc_test.c  test_all.sh
SGP/utils/src/libSGP/: CMakeLists.txt  Makefile  sgp.c  sgp_axi.c  sgp_graphics.c  sgp_shaders.c  sgp_system.c  sgp_transmit.c  spv_to_sgp.lua
SGP/utils/src/libsimpleGL/: Makefile
SGP/utils/src/libsimpleGLU/: CMakeLists.txt  Makefile  simpleGLU.c
SGP/utils/src/sgp_fbtransmit/: CMakeLists.txt  Makefile  sgp_fbtransmit  sgp_fbtransmit.c  sgp_fbtransmit.h  utils.c
SGP/utils/src/sgp_test/: CMakeLists.txt  Makefile  sgp_test.c
(+560 files in other folders)
